--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ body {
 }
 .navbar-title {
     font-size: clamp(40px,4vw,50px);
-    margin: 0px 5px;
+    margin: 0px 2px;
     padding-left: 5px;
     place-self: center;
     text-align: center;
@@ -53,7 +53,7 @@ body {
     color: rgb(200, 200, 200);
     font-size: clamp(18px,1.5vw,24px);
     font-weight: bolder;
-    margin: 5px 5px;
+    margin: 5px;
 }
 .not-current-location:hover {
     text-decoration: underline;
@@ -66,11 +66,12 @@ body {
 
 footer {
     display: grid;
-    grid-template-columns: repeat(3,minmax(117px,33%));
+    grid-template-columns: 1fr 1fr 70px;
     grid-template-rows: 50px 20px;
     background-color: rgb(40, 40, 40);
     padding: 10px 0px 5px;
     border-top: 2px solid grey;
+    width: 100%;
 }
 .contact-button {
     color: white;
@@ -90,15 +91,23 @@ footer {
     place-self: end;
     padding-bottom: 5px;
 }
-
 #trademark-section {
     grid-column: 2 / span 1;
     grid-row: 2 / span 1;
     place-self: center;
     margin-bottom: 15px;
-    width: max-content;
     font-size: clamp(15px,1.5vw,20px);
 }
+@media screen and (max-width:600px) {
+    #trademark-section {
+        grid-column: 1 / span 2;
+    }
+    .contact-button {
+        grid-column: 1 / span 2;
+    }
+}
+
+
 
 
 
@@ -529,7 +538,7 @@ footer {
     margin-right: 20px;
 }
 #profile-photo {
-    font-size: 20px;
+    font-size: clamp(10px,3vw,20px);
     border: 5px solid goldenrod;
     padding: 5px;
     border-radius: 10px;
@@ -559,16 +568,16 @@ footer {
     flex-flow: row wrap;
     justify-content: space-around;
     margin-bottom: 15px;
-    font-size: clamp(12px,1vw,40px);
+    font-size: clamp(12px,2vw,30px);
 }
 .profile-buzzwords {
-    margin: 0px 1px;
+    margin: 1px 1px;
 }
 #profile-name-and-age {
-    font-size: clamp(30px,4vw,60px);
+    font-size: clamp(20px,4vw,60px);
 }
 #profile-age {
-    font-size: clamp(20px,2.7vw,40px);
+    font-size: clamp(18px,2.7vw,40px);
 }
 #profile-career {
     color: rgb(100, 100, 255);
@@ -587,7 +596,7 @@ footer {
     font-weight: bolder;
 }
 #profile-bio {
-    font-size: clamp(15px,1vw,45px);
+    font-size: clamp(12px,2vw,20px);
     margin: 30px 5px 10px;
 }
 .contact-option {
@@ -677,6 +686,18 @@ footer {
         grid-row: 1 / span 1;
     }
 }
+@media screen and (max-width: 420px) {
+    #contact-option-2:hover  #contact-option-logo-2 {
+        opacity: 0;
+        transform: translateX(108px);
+    }
+    #contact-option-2:hover #contact-option-link-2 {
+        transform: translateX(-28px) scaleX(100%);
+        padding: 11px 0px 12px 0px;
+        width: 230px;
+        font-size: 15px;
+    }
+}
 
 
 #about-website {
@@ -697,7 +718,7 @@ footer {
     padding: 2px 10px;
     margin: 2px 0px;
     border-radius: 10px;
-    font-size: 15px;
+    font-size: clamp(12px,2vw,15px);
     width: fit-content;
 }
 #update-log-link {
@@ -708,10 +729,6 @@ footer {
 }
 .website-image-details {
     background-color: rgb(100, 100, 100);
-    margin: 2px 0px;
-    padding: 2px 10px;
-    border-radius: 10px;
-    font-size: 15px;
 }
 
 
